# table-define-exporter

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.cargo/: audit.toml
.github/workflows/: ci.yml  release.yml
.kiro/: .harness-manifest.json
.kiro/hooks/: diagnostics-on-save.kiro.hook  post-write-cleanup.kiro.hook  post-write-review.kiro.hook  pre-shell-guard.kiro.hook  pre-write-guard.kiro.hook  review-on-stop.kiro.hook
.kiro/settings/: mcp.json
.kiro/steering/: coding-style.md  cpp-patterns.md  cpp-rules.md  cpp-testing.md  csharp-rules.md  dependencies.md  documentation.md  git-workflow.md  golang-patterns.md  golang-rules.md  golang-testing.md  java-patterns.md  java-rules.md  kotlin-rules.md  kotlin-testing.md  observability.md  patterns.md  performance.md  perl-patterns.md  perl-rules.md  perl-security.md  perl-testing.md  php-rules.md  product.md  python-patterns.md  python-rules.md  python-testing.md  refactoring.md  rust-patterns.md  rust-rules.md  rust-testing.md  security.md  testing.md  typescript-rules.md
src/: concurrency.rs  config.rs  db.rs  error.rs  identifier.rs  lib.rs  main.rs  model.rs  run.rs  secret.rs
src/db/: connect.rs  mod.rs  mysql.rs  (+2 more)
tests/: concurrency_test.rs  config_test.rs  connect_options_test.rs  db_test.rs  export_predicate_test.rs  export_test.rs  identifier_test.rs  markdown_view_test.rs  model_test.proptest-regressions  model_test.rs  pg_indexdef_test.rs  pg_types_test.proptest-regressions  pg_types_test.rs  postgres_api_test.rs  row_helpers_test.rs  run_error_test.rs  secret_test.rs  sql_terminator_test.rs
(+33 files in other folders)
